--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </head>
   <body>
     <div class="textColumn">
-      <h1>Welcome</h1>
+      <h1>Welcome to demo</h1>
       <p>Your first AWS Elastic Beanstalk Node.js application is now running</p>
     </div>
     <div class="linksColumn">
